[package]
name = "karmist"
edition = "2024"
version = "1.0.0"
authors = ["sarkar-segfault"]
description = "todoist, but for gigachads"
license = "GPL-3.0-or-later"
repository = "https://github.com/sarkar-segfault/karmist"
homepage = "https://crates.io/crates/karmist"
documentation = "https://docs.rs/karmist"
readme = "README.md"
keywords = ["cli", "app", "interactive", "todo", "fun"]
categories = ["command-line-utilities", "command-line-interface", "text-processing"]

[dependencies]
argh = { version = "0.1.13", default-features = false, features = ["help"] }
console = "0.16.2"
dialoguer = { version = "0.12.0", default-features = false }
serde = { version = "1.0.228", features = ["alloc", "derive"] }
serde_json = "1.0.149"
